<resources>

    <string name="app_name">I owe you</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="menu_add">Add</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="delete">deleted</string>
    
    <string name="title_new">New</string>
    <string name="type">Type</string>
    <string name="contact">Contact</string>
    <string name="contactHint">Firstname Lastname</string>
    <string name="what">What</string>
    <string name="desc">Description</string>
    <string name="saved">Saved!</string>
    <string name="empty">Please fill out empty fields.</string>
    

	<string name="has_owe">I owe you</string>
	<string name="owe_to">You owe me</string>    
	
	<string name="show_hase_owe">You owe</string>
	<string name="mailtext_has_owe">You owe %1$s something: %2$s ; Date: %3$s</string>
	
    <string name="show_owe_to">He/She owe to you</string>
    <string name="mailtext_owe_to">You owe me something: %1$s ; Date: %2$s</string>
    
    <string name="selectContact">select</string>
    <string name="date">Date</string>
    <string name="remind">Remind me!</string>
    
    <string name="deleteCardInfo">Swipe card to edit entry</string>
    <string name="noData">no data</string>
    <string name="deleteComplete">Deleted</string>
    <string name="deleteNoData">Delete: no data found.</string>

    <string name="card1">You still own %1$s objects from others.</string>
    <string name="card2">You lent %1$s objects.</string>
    
    <string name="backupSuccess">Backup successful. File gvisions.backup.xml placed at internal storage.</string>
    <string name="backupFailed">Backup failed.</string>
    <string name="restoreSuccess">Restore successful.</string>
    <string name="restoreFailed">Restore failed.</string>
    
    <string name="about">About</string>
    <string name="summary">Default setting for new items</string>
    <string name="calendar">Calendar</string>
    

    <!--  spinner -->
 	<string-array name="spinner">
		<item>@string/has_owe</item>
		<item>@string/owe_to</item>
	</string-array>
	
 	
 	<!--  Rate -->
    <string name="rate_txt1">If you enjoy using </string>
    <string name="rate_txt2">, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_btn_rate">Rate </string>
    <string name="rate_btn_later">Remind me later!</string>
    <string name="rate_btn_no">No, thanks!</string>
    
    <!--  Navigation -->
    <string name="survey">User Survey</string>
    <string name="contact">Contact me!</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    
    <string name="survey_u">results online (german)</string>
    <string name="contact_u"></string>
    <string name="settings_u">personalisize the app</string>
    <string name="login_u">Hello, Guest!</string>
    
    <!--  Das ist neu -->
	<string name="version_new">Thats new in version</string>
	<string name="version_text">This update translate the app full in english.</string>
	<string name="new_text">New</string>
	<string name="new_swipe">To edit a entry, tap on it.\nTo delete, wipe it out of the screen ;-)</string> <!-- "Um einen Eintrag zu editieren, klicke auf diesen.\nUm einen Eintrag zu löschen, wische diesen einfach weg." -->
    
    
    
    <!--  Version  -->
    <string name="version">4</string>
    
    
    <!-- DB -->
	<string name="dbname">oweapp</string> 
  	<string-array name="create">
    <item>
      create table owe(
        id integer primary key autoincrement,
        contacturi varchar(100),
        what varchar(500),
        fromto varchar(500),
        desc varchar(999),
        type varchar(50),
        deadline varchar(50)
      )
    </item>
  </string-array>
    	<string-array name="update_1">
    <item>
      ALTER TABLE owe ADD COLUMN deadline VARCHAR(50);
    </item>
  </string-array>
  

  <!--  Action Bar Color -->
  <style name="ExtendedHoloLightTheme" parent="@android:style/Theme.Holo.Light">
    <item name="android:actionBarStyle">@style/MyActionBar</item>
	</style>
	
	<style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
	    <item name="android:background">#33B5E5</item>
	</style>
	<string-array name="planets_array">
	    
		<item>Nutzerumfrage</item>
		<item>Einstellungen</item>
	</string-array>
    	
</resources>